# Employee-database

./: .gitignore  CMakeLists.txt  README.md
src/: database.cpp  database.hpp  employee.cpp  employee.hpp  gender.cpp  gender.hpp  main.cpp  test.cpp
